# redcrab-rt

./: Cargo.toml  builder.py
src/: antidetect.rs  c2.rs  dpapi.rs  guardian.rs  hollow.rs  keylog.rs  lateral.rs  loader.rs  main.rs  pe_obfuscate.rs  persist.rs  post_shutdown.rs  resurrect.rs  selfdestruct.rs  sleep.rs  spoof.rs  ssn_audit.rs  syscall.rs  token.rs  watchdog.rs  webcam.rs
